logs/turtlesim/build.make.076.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:228:32: error: ‘waypoint’ was not declared in this scope
       path_painter.drawEllipse(waypoint, 100, 100);
                                ^~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:228:32: note: suggested alternative: ‘paint’
       path_painter.drawEllipse(waypoint, 100, 100);
                                ^~~~~~~~
                                paint
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
